--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "wden3887-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "node server.js",
     "prestart": "parcel build public/index.html",
@@ -11,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.8.3",
     "parcel": "^2.8.3"
   },
   "dependencies": {
